--- a/public/assets/styles/index.css
+++ b/public/assets/styles/index.css
@@ -51,3 +51,70 @@
 #containerForm{
     display: none;
 }
+
+#Addlink{
+    background-color: #3baf3f!important;
+}
+
+#Addlink:hover {
+    background-color: #23d129!important;
+    ;
+}
+
+#SummitButton {
+    background-color: #3bafa9;
+}
+
+
+#buttonSearch,
+#SummitButton {
+    width: 10rem;
+    font-size: 1rem;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    outline: none;
+    margin-left: 1rem;
+}
+
+#buttonSearch,
+#SummitButton:hover {
+    box-shadow: inset 0 0 0 100px rgba(0, 0, 0, 0.1);
+}
+
+#buttonSearch span,
+#SummitButton span {
+    margin-left: 1rem;
+}
+
+#check {
+    color: #23d129;
+    margin-left: 47%;
+    font-size: 3rem;
+    display: block;
+}
+
+footer {
+    font-size: .8rem;
+    margin: 1rem;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.logo-git {
+    width: 15px;
+    height: 15px;
+}
+
+.github:hover {
+    color: #2cd131ea;
+}
+
+
+footer a:link,
+footer a:visited {
+    color: #4caf50;
+    text-decoration: none;
+}
